# Learning_Assistant

./: app.py  main.py  pyproject.toml  requirements.txt
backend/: gamify.py  generator.py  progress.py  quiz.py  rag.py  theme.py  utils.py
data/: progress.json
