[project]
name = "learning-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.27.0",
    "diffusers>=0.30.0",
    "dotenv>=0.9.9",
    "langchain>=0.2.0",
    "langchain-groq>=0.1.0",
    "pandas>=2.3.2",
    "pillow>=10.0.0",
    "plotly>=6.3.0",
    "python-docx>=1.2.0",
    "reportlab>=4.4.3",
    "requests>=2.31.0",
    "safetensors>=0.4.2",
    "streamlit>=1.49.1",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "wikipedia>=1.4.0",
]
